# pdf_translate

./: .env  .gitignore  README.md  main.py  pyproject.toml  serve.bat  serve.py  serve.sh  tasks.json  test.py
app/: __init__.py  db.py  schemas.py
app/repositories/: history_repository.py
app/routers/: __init__.py  download.py  tasks.py  translate.py  upload.py
app/services/: translation_service.py
core/: config.py  image_remover.py  image_translate.py  path_util.py
front/: next.config.ts  package.json  pnpm-lock.yaml
front/app/: layout.tsx  page.tsx
front/components/: TaskSidebar.tsx  TaskStatusPanel.tsx
front/components/ui/: button.tsx  input.tsx  label.tsx  progress.tsx  select.tsx  table.tsx
front/lib/: api.ts  utils.ts
hook/: babel_doc_hook.py
